# ajami

./: .gitignore  CMakeLists.txt  Makefile.in  README.md  aclocal.m4  config.h  configure.ac  configure.in  libtool  wscript
cmake/Modules/: GettextTranslate.cmake
controller/: CMakeLists.txt  Makefile  Makefile.in  jamincont_1912.c  jamincont_1912.xml
data/: CMakeLists.txt  Makefile  Makefile.in  ajami.gresource.xml  ajami.gresource.xml.in  ajami.xml  jamin.desktop  jamin.xml  wscript
data/css/: main.css
data/gtk/: appwindow.ui  compressor.ui  limiter.ui  menus.ui  preferences.ui  scenes.ui
data/presets/: flat.json
data/ui/: appwindow.ui  menus.ui  scenes.ui
examples/: Makefile  Makefile.in
lib/: wscript
lib/hvmeter/: hv-meter.vala  hvmeter.vala  wscript
man/: CMakeLists.txt  g3jamin.1.in
pixmaps/: Makefile  Makefile.in
po/: CMakeLists.txt  ChangeLog  LINGUAS  Makefile  Makefile.in  Makevars  POTFILES.in  ajami.pot  fr.gmo  g3jamin.pot
src/: Ajami.vala  AjamiApp.vala  AjamiCompressor.vala  AjamiGEQ.vala  AjamiLimiter.vala  AjamiPreferences.vala  AjamiScenes.vala  AjamiSpectrum.vala  AjamiState.vala  AjamiWindow.vala  CMakeLists.txt  InTrim.vala  LimiterBackend.vala  Makefile  Makefile.am  Makefile.in  Stereo.vala  ajami-app.c  ajami-app.h  ajami-appwindow.c  ajami-appwindow.h  ajami-callbacks.c  ajami-callbacks.h  ajami-i18n.h  ajami-scenes.c  ajami-scenes.h  ajami.c  ajamiapp.vala  ajamiargs.vala  ajamicompressor.vala  ajamihelp.vala  ajamilimiter.vala  ajamiscenes.vala  ajamiwindow.vala  cajami.vapi  callbacks.c  callbacks.h  callbacks_help.h  compressor-ui.c  compressor.h  (+40 more)
test/files/CVS/: Entries  Repository  Root
